tests/errors/negative_shifts.sad
# Bitwise shift count cannot be negative
show(1 << -1)
